--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer>
-	<p>By <a href="https://github.com/gremerritt">Greg Merritt</p>
+	<p>
+		Created by <a href="https://github.com/gremerritt">Greg Merritt</a>
+		using <a href="https://jekyllrb.com/">Jekyll</a>
+	</p>
 </footer>
