--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	color: $font-color;
 	font-family: $font-style;
+	background-image: url("../fabric.png");
 	font-size: 1.1em;
 	line-height: 1.6;
 	-webkit-font-smoothing: antialiased;
@@ -38,8 +39,12 @@ a:hover {
 }
 header {
 	background: $header;
+	background-image: url("../photo.png");
+	background-size: contain;
+	background-repeat:no-repeat;
+	background-position: 86% 0%;
 	padding: 0px 15px;
-	text-align: center;
+	text-align: left;
 	margin: 50px 0 0;
 	height: 50vh;
 	display: flex;
@@ -65,7 +70,7 @@ aside {
 	position: fixed;
 	top: 0;
 	left: 0;
-	background: #fff;
+	background-image: url("../fabric.png");;
 	width: 100%;
 	z-index: 2;
 	border-bottom: 1px solid lighten($light, 30%);
@@ -85,13 +90,13 @@ aside {
 					text-decoration: none;
 					display: block;
 					padding: 15px;
-					font-family: 'Muli', sans-serif;
+					font-family: 'Ubuntu', sans-serif;
 					line-height: 20px;
 					margin-bottom: -1px;
 					box-shadow: 0;
 					&:hover,
 					&:active {
-						background: $header;
+						background-image: url("../congruent_pentagon.png");
 						text-decoration: none;
 						color: $main;
 					}
@@ -107,5 +112,9 @@ aside {
 }
 footer {
 	text-align: center;
+	font-size: x-small;
 	padding: 40px;
+}
+p.about {
+	text-align: center;
 }
