--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	color: $font-color;
 	font-family: $font-style;
-	background-image: url("../fabric.png");
+	background-image: url("../images/fabric.png");
 	font-size: 1.1em;
 	line-height: 1.6;
 	-webkit-font-smoothing: antialiased;
@@ -39,7 +39,7 @@ a:hover {
 }
 header {
 	background: $header;
-	background-image: url("../photo.png");
+	background-image: url("../images/photo.png");
 	background-size: contain;
 	background-repeat:no-repeat;
 	background-position: 86% 0%;
@@ -70,7 +70,7 @@ aside {
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-image: url("../fabric.png");;
+	background-image: url("../images/fabric.png");;
 	width: 100%;
 	z-index: 2;
 	border-bottom: 1px solid lighten($light, 30%);
@@ -96,7 +96,7 @@ aside {
 					box-shadow: 0;
 					&:hover,
 					&:active {
-						background-image: url("../congruent_pentagon.png");
+						background-image: url("../images/tweed.png");
 						text-decoration: none;
 						color: $main;
 					}
