--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -96,7 +96,7 @@ aside {
 					box-shadow: 0;
 					&:hover,
 					&:active {
-						background-image: url("../_images/tweed.png");
+						background-image: url("../_images/food.png");
 						text-decoration: none;
 						color: $main;
 					}
