--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,9 @@ $heading-font: 'Ubuntu', sans-serif;
 $heading-font-color: #425469;
 $light: #E7EDF4;
 $header:  #FFFFFF;
+$edges: "../_images/skulls.png";
+$tabs: "../_images/food.png";
+$me: "../_images/photo.png";
 
 *,
 *::before,
