--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<p>
-		Created by <a href="https://github.com/gremerritt">Greg Merritt</a>
+		Created by <a href="{{ site.github }}">Greg Merritt</a>
 		using <a href="https://jekyllrb.com/">Jekyll</a>
 	</p>
 </footer>
