--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,12 +46,12 @@ a:hover {
 header {
 	background: $header;
 	background-image: url($me);
-	background-size: contain;
+	background-size: 28%;
 	background-repeat:no-repeat;
 	background-position: 50% 0%;
 	padding: 0px 15px;
 	margin: 10px 0 0;
-	height: 50vh;
+	height: 35vh;
 	display: flex;
 	justify-content: left;
 	align-items: center;
