Update some more formatting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 		{% include header.html %}
 		<main>
 			<div class="social">
+				<p><a href="mailto:{{ site.email }}" class="social">{{ site.email }}</a></p>
 				<a href="{{ site.github }}" class="social"><img src="/_images/github.png" class="social"></a>
 				<a href="{{ site.linkedin }}" class="social"><img src="/_images/linkedin.png" class="social"></a>
 				<a href="mailto:{{ site.email }}" class="social"><img src="/_images/email.png" class="social"></a>
