Updating icons, adding resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<main>
 			<div class="social">
 				<p><a href="mailto:{{ site.email }}" class="social">{{ site.email }}</a></p>
-				<a href="{{ site.github }}" class="social"><img src="/_images/github.png" class="social"></a>
-				<a href="{{ site.linkedin }}" class="social"><img src="/_images/linkedin.png" class="social"></a>
-				<a href="mailto:{{ site.email }}" class="social"><img src="/_images/email.png" class="social"></a>
-				<a href="{{ site.twitter }}" class="social"><img src="/_images/twitter.png" class="social"></a>
+				<a href="{{ site.github }}" class="social"><img src="/_images/github.png" title="Github" class="social"></a>
+				<a href="{{ site.linkedin }}" class="social"><img src="/_images/linkedin.png" title="LinkedIn" class="social"></a>
+				<a href="{{ site.resume }}" class="social"><img src="/_images/resume.png" title="Resume" class="social"></a>
+				<a href="mailto:{{ site.email }}" class="social"><img src="/_images/email.png" title="Email" class="social"></a>
 			</div>
 			<article>
 				{{ content }}
