Update color scheme

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,6 @@
 $content-width: 800px;
 $main: #515151;
+$tabcolor: #eaeaea;
 $font-style: 'Ubuntu', sans-serif;
 $font-color: #262626;
 $link-color: #EAEAEA;
@@ -8,7 +9,7 @@ $heading-font: 'Ubuntu', sans-serif;
 $heading-font-color: #425469;
 $light: #E7EDF4;
 $header:  #FFFFFF;
-$edges: "../_images/skulls.png";
+$edges: "../_images/bkg.png";
 $tabs: "../_images/food.png";
 $me: "../_images/photo.png";
 
