--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
 		<nav>
 			<ul>
 				{% for page in site.pages %} {% if page.title %}
-				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+				<li><a href="{{ page.url | prepend: site.baseurl }}" class="header">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
-				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
+				<li><a href="{{ "/blog" | prepend: site.baseurl }}" class="header">Blog</a></li>
 			</ul>
 			</li>
 			</ul>
